examples/test/testpolicy15347.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15347
  namespace: namespace399
spec:
  podSelector:
    matchLabels:
      key44: value15
      key28: value7
      key25: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value47
          key25: value38
          key19: value19
      podSelector:
        matchLabels:
          key4: value34
          key16: value26
